--- a/src/static/t.css
+++ b/src/static/t.css
@@ -12,8 +12,15 @@ p,figcaption { text-align: justify; }
     body { margin: 2rem 0 4rem 12.5%; width: 87.5%; }
     ul,ol,dl,table,figure { width: 87.5%; }
     p,figure { width: 50%; }
+    figure:has(.note), figure:has(.full) { clear: both; }
     figure:has(.note) figcaption { float: right; clear: right; width: 75%; margin-right: -80%; position: relative; }
     figure:has(.aside) { float: right; clear: right; width: 27.5%; margin-right: 12.5%; position: relative; }
-    figure:has(.full) { width: 87.5%; }    
+    figure:has(.full) { width: 87.5%; }
     figure:has(.full) figcaption { text-align: match-parent; float: none; clear: unset; width: unset; margin: unset; }
+    figure:has(.triptych), figure:has(.diptych) { display: inline-block; vertical-align: top; }
+    figure:has(.triptych) { width: 29%; }
+    figure:has(.diptych) { width: 43.75%; }
+	       
 }
+.content { width: 100%; }
+#preamble, #postamble { clear: both; }
